# hangManSocket

./: CMakeLists.txt  charOps.c  charOps.h  hangMan.c  hangMan.h  randomGen.c  socket.h  wordList.h
client/: main.c
server/: main.c
